<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        android:iconTint="@color/bottom_nav_item_color"/>

    <item
        android:id="@+id/matchedUserFragment"
        android:title="@string/matched_user"
        android:icon="@drawable/matched_user_con"
        android:iconTint="@color/bottom_nav_item_color"/>

    <item
        android:id="@+id/chatFragment"
        android:title="@string/chat"
        android:icon="@drawable/chat_icon"
        android:iconTint="@color/bottom_nav_item_color"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        android:iconTint="@color/bottom_nav_item_color"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"
        android:iconTint="@color/bottom_nav_item_color"/>
</menu>