<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:paddingBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_25sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hash_icon"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/email"
            style="@style/HeadingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLength="35"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_3sdp"
            style="@style/EditTextStyle"
            app:layout_constraintStart_toStartOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="@id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/password"
            style="@style/HeadingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:hint="@string/password"
            android:singleLine="true"
            android:maxLength="30"
            android:imeOptions="actionDone"
            style="@style/EditTextStyle"
            app:layout_constraintStart_toStartOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="@id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/password"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:checked="false"
            android:elevation="@dimen/_1sdp"
            android:src="@drawable/eye_hide"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword" />

      <!--  <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv1"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/ic_switch_off"
            app:layout_constraintStart_toStartOf="@id/tvPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"/>
-->
      <!--  <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_8sdp"
            app:track="@drawable/thumb_track_bg"
            android:thumb="@drawable/thumb"
            android:layout_centerVertical="true"
            app:thumbTint="@color/white"
            android:checked="true"
            app:trackTint="@color/app_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/tvPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"/>
-->
        <ToggleButton
            android:id="@+id/switchCompat"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_12sdp"
            android:background="@drawable/toggle_button"
            android:checked="true"
            android:textOff=""
            android:layout_marginTop="@dimen/_8sdp"
            android:textOn=""
            android:layout_centerVertical="true"
            app:layout_constraintStart_toStartOf="@id/tvPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:text="@string/remember_me"
            style="@style/HeadingTextView"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@id/switchCompat"
            app:layout_constraintTop_toTopOf="@id/switchCompat"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toEndOf="@id/switchCompat"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:text="@string/forgot_password"
            style="@style/HeadingTextView"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@id/switchCompat"
            app:layout_constraintTop_toTopOf="@id/switchCompat"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/switchCompat"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:text="@string/or_login_with"
            app:layout_constraintTop_toBottomOf="@id/loginBT"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoogle"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_google"
            android:elevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toStartOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/register"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/app_color"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="@dimen/_1sdp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvt"
            app:layout_constraintTop_toTopOf="@+id/tvt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>