<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hash_icon"
            android:layout_marginTop="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black_70"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/forgot_password_text"
            app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/email"
            style="@style/HeadingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/EditTextStyle"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_edit_text_border"
            app:layout_constraintStart_toStartOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="@id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/send"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>